--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 
 <head>
-    <!-- Hotjar Tracking Code for https://mentor.fit.hcmus.edu.vn/ -->
+    <!-- Hotjar Tracking Code for Demo E-commerce -->
   <script>
     (function(h,o,t,j,a,r){
         h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-        h._hjSettings={hjid:5028985,hjsv:6};
+        h._hjSettings={hjid:5041614,hjsv:6};
         a=o.getElementsByTagName('head')[0];
         r=o.createElement('script');r.async=1;
         r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
